--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mocha": "^3.2.0",
+    "mongoose": "^4.7.4",
     "uuid": "^3.0.1"
   }
 }
